# igaming-behavioral-deviation-detection

./: .gitignore  README.en.md  README.md  pyproject.toml
file/: DocMestre.tex
file/pos-textual/: Anexos.tex  Apendices.tex
file/pre-textual/: Abstract.tex  Agradecimentos.tex  Capa.tex  Dedicatoria.tex  Epigrafe.tex  Ficha.tex  InformacoesCatalograficas.tex  Resumo.tex
file/referencias/: bibliografia.bib
file/textual/: Conclusao.tex  Introducao.tex  Metodos.tex  Resultados.tex  Revisao.tex
model/: autoencoder.ipynb  clustering.ipynb  fe.ipynb  model.pkl  model_plots.py  test.ipynb  train1.ipynb
model/helper/: model_plots.py
