[project]
name = "tcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygments>=2.19.2",
    "pycaret>=3.3.2",
    "ipykernel>=7.1.0",
    "seaborn>=0.13.2",
    "pyarrow>=22.0.0",
    "fastparquet>=2024.11.0",
    "pingouin>=0.5.5",
]
